--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -45,6 +45,11 @@ jobs:
         with:
           cosign-release: 'v1.13.0'
 
+      # qemu
+       - name: Set up QEMU
+         if: github.event_name != 'pull_request'
+         uses: docker/setup-qemu-action@v1
+
 
       # Workaround: https://github.com/docker/build-push-action/issues/461
       - name: Setup Docker buildx
@@ -75,6 +80,7 @@ jobs:
         uses: docker/build-push-action@175d02bffea74695e96b351069ac938b338802f9
         with:
           context: .
+          platforms: linux/arm/v7,linux/amd64,linux/arm64,linux/ppc64le,linux/s390x
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
